Viewport sizing - test fix for odd sizes on mobile.
Found that on mobile browsers on iOS 15.1 that different heights were
reported between these properties:
window.innerHeight,
document.documentElement.clientHeight

and these properties:
height: 100% (as child of height: 100% html and body tags)
height: 100vh

Removing border and padding on test elements to see if this fixes
things. box-sizing was set to border-box which in theory shouldn't have
this issue, but I am suspicious so testing. caniuse does say Safari 15.2
is where support is added to be fair...

--- a/viewport-size/viewport-size-testing.css
+++ b/viewport-size/viewport-size-testing.css
@@ -50,10 +50,12 @@ html, body {
 }
 
 .height-tester {
-	padding-top: 4px;
 	writing-mode: vertical-rl;
 	width: var(--height-tester-width);
-	border: 3px solid green;
+	outline: 3px solid green;
+	/* Not including padding or border as even with box-sizing: border-box there were suspicious differences between
+	full height elements and the size of the window/root element. Suspect it might be due the former border and
+	padding. */
 	white-space: nowrap;
 	overflow: hidden;
 }
